Fix alignment of slider in ProjectSection component

--- a/components/sliders/Slider.module.scss
+++ b/components/sliders/Slider.module.scss
@@ -12,6 +12,7 @@ $slide-hidden-width: 60%;
 $slide-hidden-opacity: 0.5;
 
 .wrapper {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
